--- a/docs/modules/onecx-ai-svc/pages/onecx-ai-svc-attributes.adoc
+++ b/docs/modules/onecx-ai-svc/pages/onecx-ai-svc-attributes.adoc
@@ -1,5 +1,5 @@
 
-:docker-registry: https://github.com/onecx/onecx-ai-svc/pkgs/container/onecx-ai-svc
-:helm-registry: https://github.com/onecx/onecx-ai-svc/pkgs/container/charts%2Fonecx-ai-svc
+:docker-registry: https://github.com/onecx/onecx-ai-management-svc/pkgs/container/onecx-ai-management-svc
+:helm-registry: https://github.com/onecx/onecx-ai-management-svc/pkgs/container/charts%2Fonecx-ai-management-svc
 :properties-file: src/main/resources/application.properties
 :helm-file: src/main/helm/values.yaml
