--- a/docs/modules/onecx-ai-management-svc/pages/onecx-ai-management-svc-extensions.adoc
+++ b/docs/modules/onecx-ai-management-svc/pages/onecx-ai-management-svc-extensions.adoc
@@ -142,4 +142,9 @@ h| Version
 
 
 
+|===thub.com/quarkusio/quarkusio.github.io/blob/develop/_generated-doc/latest/config/quarkus-container-image-docker.adoc[Link]
+| 3.15.1
+
+
+
 |===
