--- a/docs/modules/onecx-ai-management-svc/pages/onecx-ai-management-svc-docs.adoc
+++ b/docs/modules/onecx-ai-management-svc/pages/onecx-ai-management-svc-docs.adoc
@@ -15,6 +15,7 @@ quarkus.hibernate-orm.database.generation=validate
 quarkus.hibernate-orm.multitenant=DISCRIMINATOR
 quarkus.liquibase.migrate-at-start=true
 quarkus.liquibase.validate-on-migrate=true
+tkit.security-dynamic-test.openapi.enabled=false
 tkit.dataimport.enabled=false
 tkit.dataimport.configurations.chat.file=dev-data.import.json
 tkit.dataimport.configurations.chat.metadata.operation=CLEAN_INSERT
