--- a/docs/modules/onecx-ai-management-svc/pages/index.adoc
+++ b/docs/modules/onecx-ai-management-svc/pages/index.adoc
@@ -1,8 +1,7 @@
 include::onecx-ai-management-svc-attributes.adoc[opts=optional]
 
-== onecx-ai-management-svc
+= onecx-ai-management-svc
 
-include::docs.adoc[opts=optional]
 
 
 include::onecx-ai-management-svc-docs.adoc[opts=optional]
