--- a/docs/modules/onecx-ai-management-svc/pages/onecx-ai-management-svc-docs.adoc
+++ b/docs/modules/onecx-ai-management-svc/pages/onecx-ai-management-svc-docs.adoc
@@ -1,10 +1,12 @@
 
 include::onecx-ai-management-svc-attributes.adoc[opts=optional]
 
-=== Default properties
+{docker-registry}[Link to Docker registry]
+
+== Default properties
 
 .{properties-file}
-[%collapsible%open]
+[%collapsible]
 ====
 [source,properties,subs=attributes+]
 ----
@@ -22,34 +24,24 @@ tkit.dataimport.configurations.chat.metadata.operation=CLEAN_INSERT
 tkit.dataimport.configurations.chat.enabled=false
 tkit.dataimport.configurations.chat.stop-at-error=true
 tkit.rs.context.tenant-id.enabled=false
-quarkus.openapi-generator.codegen.input-base-dir=target/tmp/openapi
-quarkus.openapi-generator.codegen.spec.onecx_ai_svc_openapi_yaml.config-key=onecx_ai_svc
-quarkus.openapi-generator.codegen.spec.onecx_ai_svc_openapi_yaml.base-package=gen.io.github.onecx.ai.clients
-quarkus.openapi-generator.codegen.spec.onecx_ai_svc_openapi_yaml.return-response=true
-quarkus.openapi-generator.codegen.spec.onecx_ai_svc_openapi_yaml.additional-api-type-annotations=@org.eclipse.microprofile.rest.client.annotation.RegisterClientHeaders;
 %prod.quarkus.datasource.jdbc.url=${DB_URL:jdbc:postgresql://postgresdb:5432/onecx-ai?sslmode=disable}
 %prod.quarkus.datasource.username=${DB_USER:onecx-ai}
 %prod.quarkus.datasource.password=${DB_PWD:onecx-ai}
-%prod.quarkus.rest-client.onecx_ai_svc.url=http://onecx-ai-management-svc:8080
 ----
 ====
 
-=== Extensions
-
+== Extensions
+.Extensions List
+[%collapsible]
+====
 include::onecx-ai-management-svc-extensions.adoc[opts=optional]
+====
 
-=== Container
+== Helm
 
-{docker-registry}[Docker registry]
+{helm-registry}[Link to Helm registry]
 
-
-=== Helm
-
-{helm-registry}[Helm registry]
-
-Default values
-
-.{helm-file}
+.Default values in {helm-file}
 [source,yaml]
 ----
 app:
@@ -60,4 +52,3 @@ app:
   db:
     enabled: true
 ----
-
