--- a/docs/modules/onecx-ai-management-svc/pages/onecx-ai-management-svc-docs.adoc
+++ b/docs/modules/onecx-ai-management-svc/pages/onecx-ai-management-svc-docs.adoc
@@ -22,6 +22,10 @@ quarkus.hibernate-orm.database.generation=validate
 quarkus.hibernate-orm.multitenant=DISCRIMINATOR
 quarkus.hibernate-orm.jdbc.timezone=UTC
 quarkus.hibernate-orm.metrics.enabled=true
+quarkus.fault-tolerance."io.github.onecx.ai.common.services.llm.AbstractLlmService/executeToolRequestWithRetry".retry.max-retries=${onecx.ai.dispatch.mcp.max-tool-execution-retries}
+quarkus.fault-tolerance."io.github.onecx.ai.common.services.llm.AbstractLlmService/executeToolRequestWithRetry".retry.delay=${onecx.ai.dispatch.mcp.tool-execution-retry-delay}
+quarkus.fault-tolerance."io.github.onecx.ai.common.services.mcp.MCPService/receiveToolSpecifications".retry.max-retries=${onecx.ai.dispatch.mcp.max-tool-execution-retries}
+quarkus.fault-tolerance."io.github.onecx.ai.common.services.mcp.MCPService/receiveToolSpecifications".retry.delay=${onecx.ai.dispatch.mcp.tool-execution-retry-delay}
 quarkus.liquibase.migrate-at-start=true
 quarkus.liquibase.validate-on-migrate=true
 %prod.quarkus.datasource.jdbc.url=${DB_URL:jdbc:postgresql://postgresdb:5432/onecx-ai?sslmode=disable}
